name:                layered-graph-drawing
version:             0.2.0.0
synopsis:            Layered Graph Drawing after Sugiyama
description:         Calculates the positions of graph nodes in a table with layered graph drawing
homepage:            https://github.com/tkvogt/layered-graph-drawing
license:             BSD3
license-file:        LICENSE
author:              Tillmann Vogt
maintainer:          tillk.vogt@gmail.com
copyright:           2023 Tillmann Vogt
category:            Graphics, Graphs
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Graph.CommonGraph
                     , Graph.GraphDrawing
                     , Graph.SubGraphWindows
  build-depends:       aeson
                     , base >= 4.7 && < 5
                     , containers
                     , data-ordlist
                     , intmap-graph
                     , text
                     , vector
                     , vector-algorithms
  default-language:    Haskell2010

executable graph-drawing-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , containers
                     , layered-graph-drawing
--                     , diagrams
--                     , diagrams-lib
--                     , diagrams-svg
                     , intmap-graph
--                     , SVGFonts
                     , text

  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/tkvogt/layered-graph-drawing

